--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -91,19 +91,12 @@ spec:
         # Edge contains settings for clusters using manually created
         # nodes in edge envs.
         edge: {}
+        # Optional: EnableAuditWebhook allows admins to control webhook backend for audit logs of all the clusters within the DC,
+        # ignoring cluster-specific settings.
+        enableAuditWebhook: null
         # Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
         # ignoring cluster-specific settings.
         enforceAuditLogging: false
-        # Optional: EnforceAuditWebhook allows admins control webhook backend for every cluster within the DC,
-        # ignoring cluster-specific settings.
-        enforceAuditWebhook:
-          # Optional: AuditWebhook contains reference to secret holding the audit webhook backend config
-          auditWebhook: null
-          auditWebhookInitialBackoff: ""
-          # Enabled will enable or disable audit webhook backend.
-          enabled: false
-          # Optional: PolicyPreset can be set to utilize a pre-defined set of audit policy rules.
-          policyPreset: ""
         # Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
         # ignoring cluster-specific settings.
         enforcePodSecurityPolicy: false
