--- a/charts/monitoring/prometheus/templates/service.yaml
+++ b/charts/monitoring/prometheus/templates/service.yaml
@@ -23,5 +23,8 @@ spec:
   - name: web
     port: 9090
     targetPort: web
+  {{- if .Values.prometheus.extraPorts }}
+    {{- toYaml .Values.prometheus.extraPorts | nindent 2 }}
+  {{- end }}
   selector:
     app: '{{ template "name" . }}'
