allow specifying extra containerports exposure for thanos query (#13482)
* allow specifying extra containerports exposure for thanos query

* review comments addressed

--- a/charts/monitoring/prometheus/templates/service.yaml
+++ b/charts/monitoring/prometheus/templates/service.yaml
@@ -23,5 +23,8 @@ spec:
   - name: web
     port: 9090
     targetPort: web
+  {{- with .Values.prometheus.extraPorts }}
+  {{- toYaml . | nindent 2 }}
+  {{- end }}
   selector:
     app: '{{ template "name" . }}'
