--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -91,15 +91,15 @@ spec:
         # Edge contains settings for clusters using manually created
         # nodes in edge envs.
         edge: {}
-        # Optional: EnableAuditWebhook allows admins to control webhook backend for audit logs of all the clusters within the DC,
-        # ignoring cluster-specific settings.
-        enableAuditWebhook: null
         # Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
         # ignoring cluster-specific settings.
         enforceAuditLogging: false
         # Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
         # ignoring cluster-specific settings.
         enforcePodSecurityPolicy: false
+        # Optional: EnforcedAuditWebhookSettings allows admins to control webhook backend for audit logs of all the clusters within the DC,
+        # ignoring cluster-specific settings.
+        enforcedAuditWebhookSettings: null
         # GCP configures a Google Cloud Platform (GCP) datacenter.
         gcp:
           # Region to use, for example "europe-west3", for a full list of regions see
