--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -217,9 +217,19 @@ spec:
                               Edge contains settings for clusters using manually created
                               nodes in edge envs.
                             type: object
-                          enableAuditWebhook:
+                          enforceAuditLogging:
                             description: |-
-                              Optional: EnableAuditWebhook allows admins to control webhook backend for audit logs of all the clusters within the DC,
+                              Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
+                              ignoring cluster-specific settings.
+                            type: boolean
+                          enforcePodSecurityPolicy:
+                            description: |-
+                              Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
+                              ignoring cluster-specific settings.
+                            type: boolean
+                          enforcedAuditWebhookSettings:
+                            description: |-
+                              Optional: EnforcedAuditWebhookSettings allows admins to control webhook backend for audit logs of all the clusters within the DC,
                               ignoring cluster-specific settings.
                             properties:
                               auditWebhookConfig:
@@ -239,16 +249,6 @@ spec:
                             required:
                               - auditWebhookConfig
                             type: object
-                          enforceAuditLogging:
-                            description: |-
-                              Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
-                              ignoring cluster-specific settings.
-                            type: boolean
-                          enforcePodSecurityPolicy:
-                            description: |-
-                              Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
-                              ignoring cluster-specific settings.
-                            type: boolean
                           fake:
                             description: DatacenterSpecFake describes a fake datacenter.
                             properties:
