Fix minore issues with Velero KKP chart

--- a/charts/backup/velero/templates/secrets.yaml
+++ b/charts/backup/velero/templates/secrets.yaml
@@ -22,7 +22,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: velero-restic-credentials
+  name: velero-repo-credentials
 type: Opaque
 data:
   repository-password: {{ . | b64enc | quote }}
