add KKP version to addon status

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -138,6 +138,9 @@ spec:
                 conditions:
                   additionalProperties:
                     properties:
+                      kubermaticVersion:
+                        description: KubermaticVersion current KKP version.
+                        type: string
                       lastHeartbeatTime:
                         description: Last time we got an update on a given condition.
                         format: date-time
