--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -139,7 +139,9 @@ spec:
                   additionalProperties:
                     properties:
                       kubermaticVersion:
-                        description: KubermaticVersion current KKP version.
+                        description: |-
+                          KubermaticVersion is the version of KKP that last _successfully_ reconciled this
+                          addon.
                         type: string
                       lastHeartbeatTime:
                         description: Last time we got an update on a given condition.
