--- a/charts/dex/values.yaml
+++ b/charts/dex/values.yaml
@@ -12,6 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Set this to true to instruct the KKP installer to install this (new) Chart
+# into the "dex" namespace, instead of installing the legacy "oauth" Chart
+# into the "oauth" namespace.
+# See https://docs.kubermatic.com/kubermatic/v2.26/installation/upgrading/upgrade-from-2.25-to-2.26/
+# for more information.
+useNewDexChart: false
+
 dex:
   replicaCount: 2
 
