Add KKP version to Addon status (#13519)
* add KKP version to addon status

* fix typo

* set KKP version in the status after reconciliation

* use addon condition instead of extra annotation to determine the need for migrations

* optimize CSI addon check

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addons.yaml
@@ -138,6 +138,11 @@ spec:
                 conditions:
                   additionalProperties:
                     properties:
+                      kubermaticVersion:
+                        description: |-
+                          KubermaticVersion is the version of KKP that last _successfully_ reconciled this
+                          addon.
+                        type: string
                       lastHeartbeatTime:
                         description: Last time we got an update on a given condition.
                         format: date-time
