--- a/charts/mla/minio/values.yaml
+++ b/charts/mla/minio/values.yaml
@@ -151,11 +151,11 @@ minio:
 
   ingress:
     enabled: false
+    ingressClassName: nginx
     labels: {}
     # node-role.kubernetes.io/ingress: platform
 
     annotations: {}
-    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
     # kubernetes.io/ingress.allow-http: "false"
     # kubernetes.io/ingress.global-static-ip-name: ""
