--- a/.golangci.yml
+++ b/.golangci.yml
@@ -86,6 +86,7 @@ issues:
   - cyclomatic complexity [0-9]+ of func `\(\*Reconciler\)\.ensureResourcesAreDeployed` is high
   - cyclomatic complexity [0-9]+ of func `TestKonnectivity` is high
   - cyclomatic complexity [0-9]+ of func `validateOpenStackCloudSpec` is high
+  - cyclomatic complexity [0-9]+ of func `\(\*ModifiersBuilder\)\.Build` is high
   # gocritic
   - singleCaseSwitch # in most cases this is the beginning of a lookup table and should be kept an obvious table
 
