--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -157,6 +157,15 @@ spec:
                             required:
                               - locationID
                             type: object
+                          apiServerServiceType:
+                            description: |-
+                              APIServerServiceType is the service type used for API Server service `apiserver-external` for the user clusters.
+                              By default, the type of service that will be used is determined by the `ExposeStrategy` used for the cluster.
+                            enum:
+                              - ClusterIP
+                              - NodePort
+                              - LoadBalancer
+                            type: string
                           aws:
                             description: AWS configures an Amazon Web Services (AWS) datacenter.
                             properties:
