--- a/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_presets.yaml
@@ -431,8 +431,10 @@ spec:
                   description: Access data for OpenStack.
                   properties:
                     applicationCredentialID:
+                      description: Application credential ID to authenticate in combination with an application credential secret (which is not the user's password).
                       type: string
                     applicationCredentialSecret:
+                      description: Application credential secret (which is not the user's password) to authenticate in combination with an application credential ID.
                       type: string
                     datacenter:
                       description: |-
@@ -440,6 +442,7 @@ spec:
                         configured datacenter.
                       type: string
                     domain:
+                      description: Domain holds the name of the identity service (keystone) domain.
                       type: string
                     enabled:
                       description: Only enabled presets will be available in the KKP dashboard.
