Webhook backend for user cluster audit logs (#13436)
* Webhook backend for user cluster audit logs

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

* improve audit webhook reconcilation logic, other review changes

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

* update webhook setting struct, webhook secret made mandatory

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

* rename webhook enforcement field in dc spec

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

* remove cluster update call from webhook secret reconciler

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

---------

Signed-off-by: Akash Gautam <gautamakash04@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -191,6 +191,26 @@ spec:
                               type: object
                           type: object
                       type: object
+                    webhookBackend:
+                      description: 'Optional: Configures the webhook backend for audit logs.'
+                      properties:
+                        auditWebhookConfig:
+                          description: 'Required : AuditWebhookConfig contains reference to secret holding the audit webhook config file'
+                          properties:
+                            name:
+                              description: name is unique within a namespace to reference a secret resource.
+                              type: string
+                            namespace:
+                              description: namespace defines the space within which the secret name must be unique.
+                              type: string
+                          type: object
+                          x-kubernetes-map-type: atomic
+                        auditWebhookInitialBackoff:
+                          default: 10s
+                          type: string
+                      required:
+                        - auditWebhookConfig
+                      type: object
                   type: object
                 backupConfig:
                   description: 'Optional: BackupConfig contains the configuration options for managing the Cluster Backup Velero integration feature.'
