--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -236,6 +236,28 @@ spec:
                               Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
                               ignoring cluster-specific settings.
                             type: boolean
+                          enforcedAuditWebhookSettings:
+                            description: |-
+                              Optional: EnforcedAuditWebhookSettings allows admins to control webhook backend for audit logs of all the clusters within the DC,
+                              ignoring cluster-specific settings.
+                            properties:
+                              auditWebhookConfig:
+                                description: 'Required : AuditWebhookConfig contains reference to secret holding the audit webhook config file'
+                                properties:
+                                  name:
+                                    description: name is unique within a namespace to reference a secret resource.
+                                    type: string
+                                  namespace:
+                                    description: namespace defines the space within which the secret name must be unique.
+                                    type: string
+                                type: object
+                                x-kubernetes-map-type: atomic
+                              auditWebhookInitialBackoff:
+                                default: 10s
+                                type: string
+                            required:
+                              - auditWebhookConfig
+                            type: object
                           fake:
                             description: DatacenterSpecFake describes a fake datacenter.
                             properties:
