Fix: Update Vsphere Integration Test (#13572)
* update the vsphere integration test config

* update the vsphere integration test config

* update seed object for ci/testdata

* update datastore

* update datastore

* disable the datastore-cluster scenario

* disable the datastore-cluster scenario

* update the vsphere integration test config

update the vsphere integration test config

update seed object for ci/testdata

update datastore

update datastore

disable the datastore-cluster scenario

* disable the datastore-cluster scenario

* disable prow job

* disable prow job

--- a/.prow/provider-vsphere.yaml
+++ b/.prow/provider-vsphere.yaml
@@ -152,7 +152,9 @@ presubmits:
 
   - name: pre-kubermatic-e2e-vsphere-ubuntu-1.30-datastore-cluster
     decorate: true
-    run_if_changed: "(addons/csi/vsphere|pkg/provider/cloud/vsphere)"
+    # This job is disabled currently because we have a datastore cluster 
+    # but it will not work as it is connected to vSAN and vSAN is messed up.
+    # run_if_changed: "(addons/csi/vsphere|pkg/provider/cloud/vsphere)" 
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
     labels:
       preset-vsphere: "true"
