--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -245,6 +245,12 @@ spec:
             ubuntu: ""
           # Optional: defines if the IPv6 is enabled for the datacenter
           ipv6Enabled: false
+          # Optional: Gets mapped to the "lb-method" setting in the cloud config.
+          # defaults to "ROUND_ROBIN".
+          loadBalancerMethod: null
+          # Optional: Gets mapped to the "lb-provider" setting in the cloud config.
+          # defaults to ""
+          loadBalancerProvider: null
           # Optional: Gets mapped to the "manage-security-groups" setting in the cloud config.
           # This setting defaults to true.
           manageSecurityGroups: true
