--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -79,7 +79,24 @@ spec:
           # found at https://azure.microsoft.com/en-us/global-infrastructure/locations/
           location: ""
         # Baremetal contains settings for baremetal clusters in datacenters.
-        baremetal: {}
+        baremetal:
+          tinkerbell:
+            # Images represents standard VM Image sources.
+            images:
+              # HTTP represents a http source.
+              http:
+                # OperatingSystems represents list of supported operating-systems with their URLs.
+                operatingSystems:
+                  centos:
+                    vX.Y: http://example.com/images/os.iso
+                  flatcar:
+                    vX.Y: http://example.com/images/os.iso
+                  rhel:
+                    vX.Y: http://example.com/images/os.iso
+                  rockylinux:
+                    vX.Y: http://example.com/images/os.iso
+                  ubuntu:
+                    vX.Y: http://example.com/images/os.iso
         # BringYourOwn contains settings for clusters using manually created
         # nodes via kubeadm.
         bringyourown: {}
@@ -172,15 +189,15 @@ spec:
               # OperatingSystems represents list of supported operating-systems with their URLs.
               operatingSystems:
                 centos:
-                  <<version>>: <<url>>
+                  vX.Y: http://example.com/images/os.iso
                 flatcar:
-                  <<version>>: <<url>>
+                  vX.Y: http://example.com/images/os.iso
                 rhel:
-                  <<version>>: <<url>>
+                  vX.Y: http://example.com/images/os.iso
                 rockylinux:
-                  <<version>>: <<url>>
+                  vX.Y: http://example.com/images/os.iso
                 ubuntu:
-                  <<version>>: <<url>>
+                  vX.Y: http://example.com/images/os.iso
           # Optional: InfraStorageClasses contains a list of KubeVirt infra cluster StorageClasses names
           # that will be used to initialise StorageClasses in the tenant cluster.
           # In the tenant cluster, the created StorageClass name will have as name:
